kustomize/services/variation-a/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: variation-a
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: variation-a
          image: variation-a
          ports:
            - name: http
              containerPort: 80
