kustomize/services/variation-a/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: variation-a
spec:
  ports:
    - port: 80
      name: http
