kustomize/services/variation-a/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: variation-a
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              serviceName: variation-a
              servicePort: http
            path: /
